# yuzu-ssbu-optimizer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
back-end/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
back-end/capabilities/: migrated.json
back-end/src/: config.rs  main.rs  optimizer.rs  profile.rs  utils.rs
front-end/src/: app.vue  main.js
front-end/src/modules/OptionCard/: mod.vue
front-end/src/modules/ProfileView/: mod.vue
front-end/src/modules/StatusIcon/: mod.vue
front-end/src/plugins/: vuetify.js
front-end/src/services/: http.js
