[package]
name = "yuzu-ssbu-optimizer"
version = "1.4.0"
description = "App to optimize and manage SSBU on the yuzu emulator"
authors = ["saad-script"]
default-run = "yuzu-ssbu-optimizer"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [ "dialog-all", "http-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.20"
vectorize = "0.2.0"
include_dir = "0.7.3"
winreg = "0.52"
rust-ini = "0.20.0"
sysinfo = "0.30.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
